fixed overflow issues.

--- a/src/global.css
+++ b/src/global.css
@@ -92,5 +92,4 @@
 }
 body {
   background: var(--bodyBG);
-  overflow-x: hidden;
 }
