--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -3,6 +3,7 @@
   height: 100vh;
 }
 .header {
+  overflow-x: hidden;
   position: relative;
   background-color: transparent;
   display: flex;
@@ -16,46 +17,6 @@
 }
 .desktop-logo {
   display: none;
-}
-.burger {
-  display: block;
-  height: 25px;
-  margin-inline-end: 1rem;
-}
-.burger div {
-  width: 25px;
-  height: 2px;
-  background-color: var(--mainGrey);
-  margin: 4px;
-}
-.nav {
-  position: absolute;
-  top: 10vh;
-  right: 0;
-  background-color: hsl(38, 58%, 0%, .4);
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  z-index: 100;
-  display: flex;
-  flex-direction: column;
-  height: 91vh;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 55%;
-  opacity: 0;
-  transform: translateX(100%);
-  transition: all 0.4s ease-in-out;
-}
-.nav-active {
-  transform: translateX(0);
-  opacity: 1;
-}
-.nav__link {
-  text-decoration: none;
-  color: hsl(38, 58%, 90%, .85);
-  font-size: 0.8rem;
-  letter-spacing: 1px;
-  transition: all 0.15s ease-in-out;
 }
 /*  //! FOOTER SECTION */
 .footer-container {
@@ -77,7 +38,6 @@
   left: 0;
   width: 100vw;
   height: 100%;
-  /* background: var(--greenBoxGradient); */
   background: var(--footerGradient);
 }
 .footer-logo {
@@ -141,6 +101,9 @@
     padding: 1rem;
     min-height: 13vh;
     box-shadow: 0 1px 10px 10px rgba(0, 0, 0, 0.2);
+  }
+  .footer {
+    gap: 0;
   }
   .footer-logo {
     display: block;
